--- a/styles/estilos_johan.css
+++ b/styles/estilos_johan.css
@@ -1,3 +1,5 @@
+/* clase Generales*/
+
 body{
     background-color: black;
     color: #FFFF;
@@ -7,24 +9,15 @@ article{
     padding: 1.5 rem ;
     border-bottom:  1px solid #FFFFFF;
 }
-.resaltado{
-    color: yellow;
-}
 #titulo_del_blog{
     text-align: center;
     font-size: 3remtea;
 }
-.ilustracion{
-    border: 4px solid #FFFFFF;
-    display: inline;
-}
-#footer_blog{
-    margin: 2rem;
-}
-.figcaption_estilo{
-    margin-top: 1rem;
-    margin-left: 1rem;
-    font-style: italic;
+/* Terminan clases generales  */
+
+/* barra de navegación */
+.resaltado{
+    color: yellow;
 }
 nav>ul>li{
     list-style: none;
@@ -32,3 +25,22 @@ nav>ul>li{
 nav>ul>li>a{
     text-decoration: none;
 }
+/* fin barra de navegación */
+
+/* footer del blog */
+#footer_blog{
+    margin: 2rem;
+}
+/* fin del footer del blog */
+
+/* ilustraciones */
+.ilustracion{
+    border: 4px solid #FFFFFF;
+    display: inline;
+}
+.figcaption_estilo{
+    margin-top: 1rem;
+    margin-left: 1rem;
+    font-style: italic;
+}
+/* fin ilustraciones */
