--- a/styles/estilos_emiliano.css
+++ b/styles/estilos_emiliano.css
@@ -1,26 +1,47 @@
 /* Clases generales */
 body{
-    background-color: grey;
+    background-color: black;
     color:rgb(255, 255, 255);
+    margin: 0;
 }
-
+@media (min-width: 1024.1px ) {
+    main {
+        grid-column: span 8;
+    }
+}
+main {
+    grid-column: span 12;
+}
+@media (min-width: 1024.1px){
+    aside{
+        grid-column: span 4;
+    }
+}
+aside{
+    grid-column: span 12;
+}
+@media (min-width: 1024.1px) {
+    footer {
+        grid-column: span 12;
+    }
+}
+footer {
+    grid-column: span 12;
+}
 article{
     background-color:rgb(44, 43,43);
     padding: 1.5 rem;
     border-bottom: rgb(255, 255, 255) 1px solid;
 }
-
 #titulo_del_blog{
     text-align: center;
     font-size: 3erm;
 }
 /* Terminan clases generales*/
-
 /* Empieza barras de navegación */
 .resaltado{
     color: yellow;
 }
-
 nav>ul>li {
     list-style: none;
 }
@@ -28,13 +49,20 @@ a>li>ul>nav{
     text-decoration: none;
 }
 /* Termina barra de navegación */
-
 /* Footer del blog */
 #footer_blog{
+    display: flex;
     margin: 2rem;
+    align-content: center;
+    justify-content: space-between;
+    padding: 4rem;
+    padding: 0px 0px 0px 0px;
+    font-size: 1.3rem;
+}
+#footer_blog div:nth-child(2){
+    font-size: 0.9rem;
 }
 /* Fin del footer del blog */
-
 /* Ilustraciones */
 .ilustracion{
     border: white 4px solid;
@@ -56,8 +84,8 @@ section{
     grid-auto-rows: auto;
     /* añade un espacio entre los elementos del grid de 3rem */
     gap: 3rem;
+    padding-top: 6rem;
 }
-
 /* Termina grid */
 /* apunta sólo a los header que son hijos directos de section */
 section>header{
@@ -75,4 +103,69 @@ section>aside{
 section>footer{
     /* esta sección se extenderá 12 columnas. */
     grid-column: span 12;
+}
+nav{
+    font-size: 1.3rem;
+    position: fixed;
+}
+nav>ul>li>a:hover{
+    text-decoration: underline;
+    color: greenyellow;
+}
+nav>ul{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: auto;
+    gap: 1rem;
+    border-bottom: 1px solid #fff;
+    padding-bottom: 1.5rem;
+}
+@media (min-width: 1100px) {
+    nav>ul{
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        border-bottom: 1px solid #fff;
+        padding-bottom: 0.5rem;
+    }
+}
+article>header>hgroup{
+    display: flex;
+    align-content: center;
+    justify-content: space-between;
+}
+article>header>hgroup>h2{
+    display: flex;
+    align-content: center;
+}
+article>header>hgroup>h2>img{
+    margin-right: 1rem;
+}
+aside>h2{
+    align-content: center;
+    font-size: 1.3rem;
+}
+aside>div:nth-of-type(even){
+    background-color: rgb(44, 43,43);
+}
+aside>div>img{
+    background-color: #fff;
+    padding: 0.5rem;
+    border-radius: 50%;
+}
+aside>div{
+    display: flex;
+    align-items: flex-end;
+    border: 1px dashed #fff;
+    margin: 20px;
+    border-radius: 15px;
+}
+@media (min-width: 1024.1px) and (max-width: 1324.1px) {
+    aside div {
+        flex-direction: column;
+    }
+}
+head title {
+    width: min(2rem, 7rem)
+    font-size calc(1% + 2rem)
 }
