--- a/styles/estilos_emiliano.css
+++ b/styles/estilos_emiliano.css
@@ -1,6 +1,6 @@
 /* Clases generales */
 body{
-    background-color: black;
+    background-color: rgb(255, 115, 0);
     color:rgb(255, 255, 255);
     margin: 0;
 }
