--- a/styles/estilos_emiliano.css
+++ b/styles/estilos_emiliano.css
@@ -1,6 +1,6 @@
 /* Clases generales */
 body{
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(17, 14, 14);
     color:rgb(255, 255, 255);
     margin: 0;
 }
@@ -35,7 +35,7 @@ article{
 }
 #titulo_del_blog{
     text-align: center;
-    font-size: 3erm;
+    font-size: 3rem;
 }
 /* Terminan clases generales*/
 /* Empieza barras de navegación */
@@ -107,6 +107,7 @@ section>footer{
 nav{
     font-size: 1.3rem;
     position: fixed;
+    top: 0%;
 }
 nav>ul>li>a:hover{
     text-decoration: underline;
